styled about us

--- a/about-us.html
+++ b/about-us.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .title {
+        background-color: red;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 15px;
+      }
+    </style>
   </head>
   <body>
-    <h1>About usg</h1>
+    <h1 class="title">About usg</h1>
   </body>
 </html>
