--- a/index.html
+++ b/index.html
@@ -59,7 +59,35 @@
         </div>
       </div>
     </header>
-    <main>Main</main>
+    <main>
+      <div
+        class="SWIPE"
+        style="height: 401px; border: 1px solid black; background-color: white"
+      ></div>
+      <div class="centerr">
+        <aside class="col-3 sidem"></aside>
+        <div class="mainnn col-9">
+          <div class="randomtxt">
+            Homepage > Products > <a class="line">Laptops and tablets</a>
+          </div>
+          <div class="row col-12 txtandsel">
+            <div class="col-7 bigtxt">Laptops and Tablets</div>
+            <div class="col-4 select">
+              <ul>
+                <li>
+                  sort by price
+                  <ul>
+                    <li>sort by name</li>
+                    <li>sort by date</li>
+                    <li>sort by popularity</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="footer">Footer</footer>
   </body>
 </html>
