did the main part

--- a/index.html
+++ b/index.html
@@ -76,13 +76,214 @@
               <ul>
                 <li>
                   sort by price
-                  <ul>
+                  <ul class="colorrt">
                     <li>sort by name</li>
                     <li>sort by date</li>
                     <li>sort by popularity</li>
                   </ul>
                 </li>
               </ul>
+            </div>
+          </div>
+          <div class="elements">
+            <div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgel" src="images/screen.png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#1 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$599</span><span class="cent">25</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgel" src="images/icon (9).png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#2 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$1250</span><span class="cent">99</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgelwatch" src="images/icon (10).png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#3 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$399</span><span class="cent">50</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgellaptop" src="images/laptop.png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#1 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$599</span><span class="cent">25</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgelwatch" src="images/palyer.png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#2 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$1250</span><span class="cent">99</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgelwatch" src="images/thinphone.png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#3 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$399</span><span class="cent">55</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgelwatch" src="images/thikphone.png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#1 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$599</span><span class="cent">25</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgel" src="images/icon (9).png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#2 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$1250</span><span class="cent">99</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
+            </div><div class="col col-4">
+              <div class="head">
+                <div class="bord"></div>
+                <div class="like"></div>
+                <img class="mainimgelwatch" src="images/icon (10).png" alt="" />
+              </div>
+              <div class="elbody">
+                <h2 class="mrg">#9 Device Name</h2>
+                <p class="elbodytxt mrg">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+                <p class="type mrg"><span class="bold">TYPE:</span>Laptop</p>
+                <p class="type mrg">
+                  <span class="bold">SCREEN SIZE:</span>7 inches
+                </p>
+                <p class="type mrg"><span class="bold">RAM:</span>1 GB</p>
+                <p class="price bold mrg2">
+                  <span>$399</span><span class="cent">50</span>
+                  <div class="button1"><a href="">MORE DETAILS</a></div>
+                  <div class="button2"><a href="">ADD TO CART </a><img src="images/icon (2).png" alt=""></div>
+                </p>
+              </div>
             </div>
           </div>
         </div>
