--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           <div class="col-6">
             <nav>
               <ul class="menu">
-                <li><a href="Home" class="startbr">Home</a></li>
+                <li><a href="Home" class="startbr">Home1</a></li>
                 <li>
                   <a href="Product" class="centerbr"
-                    >Productㅤ <span class="mark"> ▽</span></a
+                    >Productㅤ1 <span class="mark"> ▽</span></a
                   >
                   <ul class="submenu">
                     <li><a href="">Lorem ipsum dolor</a></li>
@@ -38,8 +38,8 @@
                     <li><a href="">Quos dolor</a></li>
                   </ul>
                 </li>
-                <li><a href="Payment">Payment </a></li>
-                <li><a href="Shipping" class="endbr">Shipping</a></li>
+                <li><a href="Payment">Payment12 </a></li>
+                <li><a href="Shipping" class="endbr">Shipping1</a></li>
               </ul>
             </nav>
           </div>
